fix overflow value

--- a/src/styles/pokemon/Pc.css
+++ b/src/styles/pokemon/Pc.css
@@ -17,7 +17,7 @@
 }
 
 .PokemonPc__boxes {
-  overflow: scroll;
+  overflow-y: auto;
   height: 100%
 }
 
